[project]
name = "harrix-py-funcs"
version = "0.1"
description = "Common functions for working in Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "libcst>=1.5.1",
    "pyside6>=6.8.1.1",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "isort>=5.13.2",
    "ruff>=0.9.0",
]
